fixed contrast (for accessibility)

--- a/styles/main.css
+++ b/styles/main.css
@@ -182,7 +182,7 @@ button:hover {
 }
 
 .project-2 {
-  background: #d0d3e6;
+  background: #9397a3;
   border-radius: 70% 30% 50% 50%/50%;
 }
 
